--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Les 3 - Opdracht CSS Grid</title>
 </head>
 <body>
+    <div class="grid-container">
+        <header>A</header>
+        <section class="section-b">B: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda autem cum dolorum eaque enim eum explicabo fugiat inventore laboriosam magni modi, numquam provident quam quibusdam reiciendis repellendus reprehenderit temporibus, vel vero? Amet dolores esse laboriosam nam quasi quod sapiente! Distinctio dolore eaque et maiores mollitia natus officiis possimus ratione veritatis? A aliquid animi cum dolore dolores earum et eum facilis fuga illo in ipsum minus molestias mollitia nemo non perspiciatis placeat, quae quia quis quod sapiente suscipit tenetur vel voluptates. A accusamus amet architecto consequuntur cum cumque dicta dignissimos distinctio dolor dolores earum, enim id ipsam necessitatibus nemo neque nobis nulla numquam optio quaerat quasi, quibusdam repudiandae rerum temporibus, ut velit veritatis voluptatibus. Commodi distinctio laudantium quae suscipit tenetur? Alias amet commodi consequatur, debitis deserunt, dolorum, iste nam obcaecati possimus quis recusandae sunt voluptatibus! A animi aut exercitationem ipsum non odio quod, suscipit. A ab aliquam aliquid asperiores debitis dicta dolore doloremque et eveniet fugit id incidunt iste, laboriosam magnam maiores minus, modi natus, nisi nulla perspiciatis porro possimus quaerat quam quia quidem quod repellendus reprehenderit sapiente suscipit tenetur velit veniam veritatis vero. A accusantium eaque eius nam necessitatibus possimus sint vel, veritatis! Est molestias nemo perspiciatis repudiandae voluptates.
+        </section>
+        <section class="section-c">C</section>
+        <section class="section-d">D</section>
+        <section class="section-e">E</section>
+        <footer>F</footer>
+    </div>
 
 </body>
 </html>
